fix select dropdown cutting off text

--- a/src/components/select/style/index.less
+++ b/src/components/select/style/index.less
@@ -58,6 +58,7 @@
 
 	&-list {
 		display: block;
+		width: 100%;
 		min-width: inherit;
 		max-height: (@select-option-height * 4.5 + @input-padding-y);
 		padding: @input-padding-y;
